(FEAT: add funcao de aumentar item no carrinho

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <div class="flex items-center gap-2 justify-between mt-3">
               <p class="font-bold text-lg">R$ 18,90</p>
               <button
-                class="bg-[#f95c99] px-4 rounded-full add-to-cart-btn"
+                class="bg-[#f95c99] px-4 rounded-full add-to-cart-btn hover:bg-[#e54b88] hover:scale-105 transition-all duration-300"
                 data-name="Sundae Especial"
                 data-price="18.90"
               >
@@ -126,7 +126,7 @@
             <div class="flex items-center gap-2 justify-between mt-3">
               <p class="font-bold text-lg">R$ 22,00</p>
               <button
-                class="bg-[#f95c99] px-4 rounded-full add-to-cart-btn"
+                class="bg-[#f95c99] px-4 rounded-full add-to-cart-btn hover:bg-[#e54b88] hover:scale-105 transition-all duration-300"
                 data-name="Milk Shake Supremo"
                 data-price="22,00"
               >
@@ -151,7 +151,7 @@
             <div class="flex items-center gap-2 justify-between mt-3">
               <p class="font-bold text-lg">R$ 15,00</p>
               <button
-                class="bg-[#f95c99] px-4 rounded-full add-to-cart-btn"
+                class="bg-[#f95c99] px-4 rounded-full add-to-cart-btn hover:bg-[#e54b88] hover:scale-105 transition-all duration-300"
                 data-name="Casquinha Dupla"
                 data-price="15,00"
               >
@@ -176,7 +176,7 @@
             <div class="flex items-center gap-2 justify-between mt-3">
               <p class="font-bold text-lg">R$ 25,00</p>
               <button
-                class="bg-[#f95c99] px-4 rounded-full add-to-cart-btn"
+                class="bg-[#f95c99] px-4 rounded-full add-to-cart-btn hover:bg-[#e54b88] hover:scale-105 transition-all duration-300"
                 data-name="Açaí Especial"
                 data-price="25,00"
               >
@@ -202,7 +202,7 @@
             <div class="flex items-center gap-2 justify-between mt-3">
               <p class="font-bold text-lg">R$ 25,00</p>
               <button
-                class="bg-[#f95c99] px-4 rounded-full add-to-cart-btn"
+                class="bg-[#f95c99] px-4 rounded-full add-to-cart-btn hover:bg-[#e54b88] hover:scale-105 transition-all duration-300"
                 data-name="Tentação Caramelada"
                 data-price="25,00"
               >
@@ -228,7 +228,7 @@
             <div class="flex items-center gap-2 justify-between mt-3">
               <p class="font-bold text-lg">R$ 30,00</p>
               <button
-                class="bg-[#f95c99] px-4 rounded-full add-to-cart-btn"
+                class="bg-[#f95c99] px-4 rounded-full add-to-cart-btn hover:bg-[#e54b88] hover:scale-105 transition-all duration-300"
                 data-name="Vulcão de Chocolate"
                 data-price="30,00"
               >
@@ -254,7 +254,7 @@
             <div class="flex items-center gap-2 justify-between mt-3">
               <p class="font-bold text-lg">R$ 20,00</p>
               <button
-                class="bg-[#f95c99] px-4 rounded-full add-to-cart-btn"
+                class="bg-[#f95c99] px-4 rounded-full add-to-cart-btn hover:bg-[#e54b88] hover:scale-105 transition-all duration-300"
                 data-name="Aconchego de Banana"
                 data-price="20,00"
               >
@@ -280,7 +280,7 @@
             <div class="flex items-center gap-2 justify-between mt-3">
               <p class="font-bold text-lg">R$ 23,50</p>
               <button
-                class="bg-[#f95c99] px-4 rounded-full add-to-cart-btn"
+                class="bg-[#f95c99] px-4 rounded-full add-to-cart-btn hover:bg-[#e54b88] hover:scale-105 transition-all duration-300"
                 data-name="Sinfonia de Frutas"
                 data-price="23,50"
               >
@@ -315,7 +315,7 @@
             <div class="flex items-center gap-2 justify-between mt-3">
               <p class="font-bold text-lg">R$ 8,00</p>
               <button
-                class="bg-[#f95c99] px-4 rounded-full add-to-cart-btn"
+                class="bg-[#f95c99] px-4 rounded-full add-to-cart-btn hover:bg-[#e54b88] hover:scale-105 transition-all duration-300"
                 data-name="Suco Natural"
                 data-price="8.00"
               >
@@ -341,7 +341,7 @@
             <div class="flex items-center gap-2 justify-between mt-3">
               <p class="font-bold text-lg">R$ 11,00</p>
               <button
-                class="bg-[#f95c99] px-4 rounded-full add-to-cart-btn"
+                class="bg-[#f95c99] px-4 rounded-full add-to-cart-btn hover:bg-[#e54b88] hover:scale-105 transition-all duration-300"
                 data-name="Bebida de Coco Refrescante"
                 data-price="11.00"
               >
@@ -366,7 +366,7 @@
             <div class="flex items-center gap-2 justify-between mt-3">
               <p class="font-bold text-lg">R$ 6,00</p>
               <button
-                class="bg-[#f95c99] px-4 rounded-full add-to-cart-btn"
+                class="bg-[#f95c99] px-4 rounded-full add-to-cart-btn hover:bg-[#e54b88] hover:scale-105 transition-all duration-300"
                 data-name="Bebida de Coco Refrescante"
                 data-price="11.00"
               >
@@ -392,7 +392,7 @@
             <div class="flex items-center gap-2 justify-between mt-3">
               <p class="font-bold text-lg">R$ 9,00</p>
               <button
-                class="bg-[#f95c99] px-4 rounded-full add-to-cart-btn"
+                class="bg-[#f95c99] px-4 rounded-full add-to-cart-btn hover:bg-[#e54b88] hover:scale-105 transition-all duration-300"
                 data-name="Limonada Mágica"
                 data-price="9.00"
               >
@@ -478,17 +478,17 @@
         <div class="flex items-center justify-center mt-4">
           <button
             id="copy-pix-btn"
-            class="hidden bg-green-500 text-white px-2 py-1 rounded ml-2"
+            class="hidden bg-green-500 text-white px-2 py-1 rounded ml-2 hover:bg-green-600 hover:scale-105 transition-all duration-300"
           >
             <i class="fas fa-copy"></i> Copiar Chave Pix
           </button>
         </div>
 
         <div class="flex items-center justify-between mt-5 w-full">
-          <button id="close-modal-btn">Fechar</button>
+          <button id="close-modal-btn" class="hover:text-gray-600 transition-colors duration-300">Fechar</button>
           <button
             id="checkout-btn"
-            class="bg-green-500 text-white px-4 py-1 rounded"
+            class="bg-green-500 text-white px-4 py-1 rounded hover:bg-green-600 hover:scale-105 transition-all duration-300"
           >
             Finalizar Pedido
           </button>
