STYLE: melhoria no layout dos itens e textos

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <div class="flex justify-center px-4 mb-8 mt-8">
       <h2
-        class="text-2xl md:text-3xl font-bold text-center bg-pink-200 rounded-full px-2"
+        class="text-2xl md:text-3xl font-bold text-center bg-gradient-to-r from-pink-200 to-purple-200 rounded-full px-8 py-3 shadow-lg""
       >
         Experimente nossas delicias, preparadas com ingredientes frescos e muito
         carinho.
@@ -87,15 +87,16 @@
       <main
         class="grid grid-cols-1 md:grid-cols-2 gap-7 md:gap-10 mx-auto max-w-7xl px-2"
       >
-        <div class="flex gap-2">
+        <div class="flex gap-2 bg-white p-4 rounded-md shadow-md">
           <img
             src="/src/assets/img/Sundae-Especial.png"
             alt="Sundae Especial"
             class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
           />
+
           <div class="w-full flex flex-col justify-around">
-            <p class="font-bold">Sundae Especial</p>
-            <p class="text-sm">
+            <p class="font-bold text-lg">Sundae Especial</p>
+            <p class="text-sm text-gray-600">
               Sorvete de creme com calda de chocolate, chantilly e amendoim.
             </p>
             <div class="flex items-center gap-2 justify-between mt-3">
@@ -105,22 +106,24 @@
                 data-name="Sundae Especial"
                 data-price="18.90"
               >
-                <i class="fa-solid fa-cart-plus text-[#d7f1f2] cursor-pointer">
+                <i
+                  class="fa fa-cart-plus text-lg text-[#d7f1f2] cursor-pointer"
+                >
                 </i>
               </button>
             </div>
           </div>
         </div>
 
-        <div class="flex gap-2">
+        <div class="flex gap-2 bg-white p-4 rounded-md shadow-md"">
           <img
             src="/src/assets/img/Milk-Shake-Supremo.png"
             alt="Sundae Especial"
             class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
           />
           <div class="w-full flex flex-col justify-around">
-            <p class="font-bold">Milk Shake Supremo</p>
-            <p class="text-sm">
+            <p class="font-bold text-lg">Milk Shake Supremo</p>
+            <p class="text-sm text-gray-600">
               Milk shake de chocolate com chantilly, calda e cerejas.
             </p>
             <div class="flex items-center gap-2 justify-between mt-3">
@@ -130,22 +133,22 @@
                 data-name="Milk Shake Supremo"
                 data-price="22,00"
               >
-                <i class="fa-solid fa-cart-plus text-[#d7f1f2] cursor-pointer">
+                <i class="fa fa-cart-plus text-lg text-[#d7f1f2] cursor-pointer">
                 </i>
               </button>
             </div>
           </div>
         </div>
 
-        <div class="flex gap-2">
+        <div class="flex gap-2 bg-white p-4 rounded-md shadow-md"">
           <img
             src="/src/assets/img/Casquinha-dupla.png"
             alt="Sundae Especial"
             class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
           />
           <div class="w-full flex flex-col justify-around">
-            <p class="font-bold">Casquinha Dupla</p>
-            <p class="text-sm">
+            <p class="font-bold text-lg">Casquinha Dupla</p>
+            <p class="text-sm text-gray-600">
               Casquinha com dois sabores à sua escolha e cobertura.
             </p>
             <div class="flex items-center gap-2 justify-between mt-3">
@@ -155,22 +158,22 @@
                 data-name="Casquinha Dupla"
                 data-price="15,00"
               >
-                <i class="fa-solid fa-cart-plus text-[#d7f1f2] cursor-pointer">
+              <i class="fa fa-cart-plus text-lg text-[#d7f1f2] cursor-pointer">
                 </i>
               </button>
             </div>
           </div>
         </div>
 
-        <div class="flex gap-2">
+        <div class="flex gap-2 bg-white p-4 rounded-md shadow-md"">
           <img
             src="/src/assets/img/Acai-Especial.png"
             alt="Sundae Especial"
             class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
           />
           <div class="w-full flex flex-col justify-around">
-            <p class="font-bold">Açaí Especial</p>
-            <p class="text-sm">
+            <p class="font-bold text-lg">Açaí Especial</p>
+            <p class="text-sm text-gray-600">
               Açaí cremoso com granola, banana, leite condensado e paçoca.
             </p>
             <div class="flex items-center gap-2 justify-between mt-3">
@@ -180,22 +183,23 @@
                 data-name="Açaí Especial"
                 data-price="25,00"
               >
-                <i class="fa-solid fa-cart-plus text-[#d7f1f2] cursor-pointer">
+              <i class="fa fa-cart-plus text-lg text-[#d7f1f2] cursor-pointer">
                 </i>
               </button>
             </div>
           </div>
         </div>
 
-        <div class="flex gap-2">
+
+        <div class="flex gap-2 bg-white p-4 rounded-md shadow-md"">
           <img
             src="/src/assets/img/Tentacao-Caramelada.png"
             alt="Sundae Especial"
             class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
           />
           <div class="w-full flex flex-col justify-around">
-            <p class="font-bold">Tentação Caramelada</p>
-            <p class="text-sm">
+            <p class="font-bold text-lg">Tentação Caramelada</p>
+            <p class="text-sm text-gray-600">
               Pudim de leite tradicional com uma generosa camada de caramelo
               crocante, servido com um toque de canela em pó.
             </p>
@@ -206,22 +210,23 @@
                 data-name="Tentação Caramelada"
                 data-price="25,00"
               >
-                <i class="fa-solid fa-cart-plus text-[#d7f1f2] cursor-pointer">
+              <i class="fa fa-cart-plus text-lg text-[#d7f1f2] cursor-pointer">
                 </i>
               </button>
             </div>
           </div>
         </div>
 
-        <div class="flex gap-2">
+
+        <div class="flex gap-2 bg-white p-4 rounded-md shadow-md"">
           <img
             src="/src/assets/img/Vulcao-de-Chocolate.png"
             alt="Sundae Especial"
             class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
           />
           <div class="w-full flex flex-col justify-around">
-            <p class="font-bold">Vulcão de Chocolate</p>
-            <p class="text-sm">
+            <p class="font-bold text-lg">Vulcão de Chocolate</p>
+            <p class="text-sm text-gray-600">
               Brownie quentinho com um centro cremoso de ganache derretida,
               servido com uma bola de sorvete de baunilha.
             </p>
@@ -232,22 +237,23 @@
                 data-name="Vulcão de Chocolate"
                 data-price="30,00"
               >
-                <i class="fa-solid fa-cart-plus text-[#d7f1f2] cursor-pointer">
+              <i class="fa fa-cart-plus text-lg text-[#d7f1f2] cursor-pointer">
                 </i>
               </button>
             </div>
           </div>
         </div>
 
-        <div class="flex gap-2">
+
+        <div class="flex gap-2 bg-white p-4 rounded-md shadow-md"">
           <img
             src="/src/assets/img/Aconchego-de-Banana.png"
             alt="Sundae Especial"
             class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
           />
           <div class="w-full flex flex-col justify-around">
-            <p class="font-bold">Aconchego de Banana</p>
-            <p class="text-sm">
+            <p class="font-bold text-lg">Aconchego de Banana</p>
+            <p class="text-sm text-gray-600">
               Banana flambada no rum ou licor, servida sobre uma fatia de bolo e
               coberta com uma bola de sorvete de creme.
             </p>
@@ -258,22 +264,23 @@
                 data-name="Aconchego de Banana"
                 data-price="20,00"
               >
-                <i class="fa-solid fa-cart-plus text-[#d7f1f2] cursor-pointer">
+              <i class="fa fa-cart-plus text-lg text-[#d7f1f2] cursor-pointer">
                 </i>
               </button>
             </div>
           </div>
         </div>
 
-        <div class="flex gap-2">
+
+        <div class="flex gap-2 bg-white p-4 rounded-md shadow-md"">
           <img
             src="/src/assets/img/Sinfonia-de-Frutas.png"
             alt="Sundae Especial"
             class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
           />
           <div class="w-full flex flex-col justify-around">
-            <p class="font-bold">Sinfonia de Frutas</p>
-            <p class="text-sm">
+            <p class="font-bold text-lg">Sinfonia de Frutas</p>
+            <p class="text-sm text-gray-600">
               Salada de frutas frescas regada com calda de iogurte grego adoçado
               e um toque de hortelã.
             </p>
@@ -284,7 +291,7 @@
                 data-name="Sinfonia de Frutas"
                 data-price="23,50"
               >
-                <i class="fa-solid fa-cart-plus text-[#d7f1f2] cursor-pointer">
+              <i class="fa fa-cart-plus text-lg text-[#d7f1f2] cursor-pointer">
                 </i>
               </button>
             </div>
@@ -293,7 +300,7 @@
       </main>
       <div class="flex justify-center px-4 mb-8 mt-8">
         <h2
-          class="text-2xl md:text-3xl font-bold text-center bg-pink-200 rounded-full px-4"
+          class="text-2xl md:text-3xl font-bold text-center bg-gradient-to-r from-pink-200 to-purple-200 rounded-full px-8 py-3 shadow-lg""
         >
           Bebidas
         </h2>
@@ -303,15 +310,17 @@
         class="grid grid-cols-1 md:grid-cols-2 gap-7 md-gap-10 mx-auto max-w-7xl px-2 mb-16"
         id="menu"
       >
-        <div class="flex gap-2">
+
+      <div class="flex gap-2 bg-white p-4 rounded-md shadow-md"">
           <img
             src="/src/assets/img/Suco-Natural.png"
             alt="Sundae Especial"
             class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
           />
           <div class="w-full flex flex-col justify-around">
-            <p class="font-bold">Suco Natural</p>
-            <p class="text-sm">Diversos sabores de frutas frescas.</p>
+            <p class="font-bold text-lg">Suco Natural</p>
+            <p class="text-sm text-gray-600">
+              Diversos sabores de frutas frescas.</p>
             <div class="flex items-center gap-2 justify-between mt-3">
               <p class="font-bold text-lg">R$ 8,00</p>
               <button
@@ -319,22 +328,23 @@
                 data-name="Suco Natural"
                 data-price="8.00"
               >
-                <i class="fa-solid fa-cart-plus text-[#d7f1f2] cursor-pointer">
+              <i class="fa fa-cart-plus text-lg text-[#d7f1f2] cursor-pointer">
                 </i>
               </button>
             </div>
           </div>
         </div>
 
-        <div class="flex gap-2">
+
+        <div class="flex gap-2 bg-white p-4 rounded-md shadow-md"">
           <img
             src="/src/assets/img/Bebida-de-Coco-Refrescante.png"
             alt="Sundae Especial"
             class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
           />
           <div class="w-full flex flex-col justify-around">
-            <p class="font-bold">Bebida de Coco Refrescante</p>
-            <p class="text-sm">
+            <p class="font-bold text-lg">Bebida de Coco Refrescante</p>
+            <p class="text-sm text-gray-600">
               Água de coco natural ou leite de coco batido com gelo e um toque
               de mel ou frutas tropicais.
             </p>
@@ -345,22 +355,23 @@
                 data-name="Bebida de Coco Refrescante"
                 data-price="11.00"
               >
-                <i class="fa-solid fa-cart-plus text-[#d7f1f2] cursor-pointer">
+              <i class="fa fa-cart-plus text-lg text-[#d7f1f2] cursor-pointer">
                 </i>
               </button>
             </div>
           </div>
         </div>
 
-        <div class="flex gap-2">
+
+        <div class="flex gap-2 bg-white p-4 rounded-md shadow-md"">
           <img
             src="/src/assets/img/Coca-lata.png"
             alt="Sundae Especial"
             class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
           />
           <div class="w-full flex flex-col justify-around">
-            <p class="font-bold">Coca lata</p>
-            <p class="text-sm">
+            <p class="font-bold text-lg">Coca lata</p>
+            <p class="text-sm text-gray-600">
               Coca-Cola Clássica · Coca-Cola Zero · Coca-Cola Light.
             </p>
             <div class="flex items-center gap-2 justify-between mt-3">
@@ -370,22 +381,23 @@
                 data-name="Bebida de Coco Refrescante"
                 data-price="11.00"
               >
-                <i class="fa-solid fa-cart-plus text-[#d7f1f2] cursor-pointer">
+              <i class="fa fa-cart-plus text-lg text-[#d7f1f2] cursor-pointer">
                 </i>
               </button>
             </div>
           </div>
         </div>
 
-        <div class="flex gap-2">
+
+        <div class="flex gap-2 bg-white p-4 rounded-md shadow-md"">
           <img
             src="/src/assets/img/Limonada-Mágica.png"
             alt="Sundae Especial"
             class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300"
           />
           <div class="w-full flex flex-col justify-around">
-            <p class="font-bold">Limonada Mágica</p>
-            <p class="text-sm">
+            <p class="font-bold text-lg">Limonada Mágica</p>
+            <p class="text-sm text-gray-600">
               Limonada artesanal com toques especiais, como gengibre ralado,
               folhas de hortelã ou frutas vermelhas.
             </p>
@@ -396,7 +408,7 @@
                 data-name="Limonada Mágica"
                 data-price="9.00"
               >
-                <i class="fa-solid fa-cart-plus text-[#d7f1f2] cursor-pointer">
+              <i class="fa fa-cart-plus text-lg text-[#d7f1f2] cursor-pointer">
                 </i>
               </button>
             </div>
@@ -485,7 +497,12 @@
         </div>
 
         <div class="flex items-center justify-between mt-5 w-full">
-          <button id="close-modal-btn" class="hover:text-gray-600 transition-colors duration-300">Fechar</button>
+          <button
+            id="close-modal-btn"
+            class="hover:text-gray-600 transition-colors duration-300"
+          >
+            Fechar
+          </button>
           <button
             id="checkout-btn"
             class="bg-green-500 text-white px-4 py-1 rounded hover:bg-green-600 hover:scale-105 transition-all duration-300"
