STYLE: mudancas na mensagem do pedido enviado

--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
           <input
             type="radio"
             name="payment"
-            value="Pagamento Pix"
+            value="Pix"
             class="w-4 h-4"
             id="pix"
           />
@@ -467,21 +467,21 @@
           <input
             type="radio"
             name="payment"
-            value="Pagamento Cartão de Crédito"
+            value="Cartão de Crédito"
             class="w-4 h-4"
           />
           <label>Cartão de Crédito</label>
           <input
             type="radio"
             name="payment"
-            value="Pagamento Cartão de Débito"
+            value="Cartão de Débito"
             class="w-4 h-4"
           />
           <label>Cartão Débito</label>
           <input
             type="radio"
             name="payment"
-            value="Pagamento Dinheiro"
+            value="Dinheiro"
             class="w-4 h-4"
           />
           <label>Dinheiro</label>
